# zeabur-django-celery-demo

./: .gitignore  Dockefile  README.md  pyproject.toml  zbpack.json
config/: celery.py  settings.py
sh/: run-celery.sh
