[project]
name = "zeabur-django-celery-demo"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "angelliang", email = "ynanxiu@qq.com" }
]
dependencies = [
    "django>=5.1.2",
    "celery[redis]>=5.4.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[tool.rye]
managed = true
virtual = true
dev-dependencies = []
